feat: Rebrand application to UAS and enhance SEO with Open Graph and Twitter meta tags.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet" />
-    <title>SleepCycle</title>
+    <title>UAS | The Ultimate App for Sleeping</title>
+    <meta name="description" content="A sleek, modern, and high-performance sleep cycle calculator designed to help you wake up feeling refreshed." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://uas.wiar8.com/" />
+    <meta property="og:title" content="UAS | The Ultimate App for Sleeping" />
+    <meta property="og:description" content="Calculate your optimal sleep cycles and wake up feeling revitalized. Modern, fast, and beautifully designed." />
+    <meta property="og:image" content="/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://uas.wiar8.com/" />
+    <meta property="twitter:title" content="UAS | The Ultimate App for Sleeping" />
+    <meta property="twitter:description" content="Calculate your optimal sleep cycles and wake up feeling revitalized. Modern, fast, and beautifully designed." />
+    <meta property="twitter:image" content="/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
